; ModuleID = '/home/carl/AnghaBench/disque/src/extr_rio.c_rioWriteBulkLongLong.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_rio.c_rioWriteBulkLongLong.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @rioWriteBulkLongLong(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca [32 x i8], align 16
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = getelementptr inbounds [32 x i8], [32 x i8]* %5, i64 0, i64 0
  %8 = load i64, i64* %4, align 8
  %9 = call i32 @ll2string(i8* %7, i32 32, i64 %8)
  store i32 %9, i32* %6, align 4
  %10 = load i32*, i32** %3, align 8
  %11 = getelementptr inbounds [32 x i8], [32 x i8]* %5, i64 0, i64 0
  %12 = load i32, i32* %6, align 4
  %13 = call i64 @rioWriteBulkString(i32* %10, i8* %11, i32 %12)
  ret i64 %13
}

declare dso_local i32 @ll2string(i8*, i32, i64) #1

declare dso_local i64 @rioWriteBulkString(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
